--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
   </main>
   <footer id="contact">
     <ul class="footer-navigation">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Our Works</a></li>
-      <li><a href="#">Clients</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#works">Our Works</a></li>
+      <li><a href="#clients">Clients</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
     <div class="brand">
       <h4>Edie</h4>
