--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         class="bi bi-list"></i></button>
     <nav>
       <ul class="primary-navigation" data-visible="false">
-        <li><a href="#home" data-link="#home">Home</a></li>
-        <li><a href="#services" data-link="#services">Services</a></li>
-        <li><a href="#works" data-link="#works">Our works</a></li>
-        <li><a href="#clients" data-link="#clients">Clients</a></li>
-        <li><a href="#contact" data-link="#contact">Contact</a></li>
+        <li class="nav-link"><a href="#home" data-link="#home">Home</a></li>
+        <li class="nav-link"><a href="#services" data-link="#services">Services</a></li>
+        <li class="nav-link"><a href="#works" data-link="#works">Our works</a></li>
+        <li class="nav-link"><a href="#clients" data-link="#clients">Clients</a></li>
+        <li class="nav-link"><a href="#contact" data-link="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
